feat: add user details endpoint
